# deezer-python

./: .all-contributorsrc  .bumpversion.cfg  .codespellrc  .coveragerc  .flake8  .fussyfox.yml  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  appveyor.yml  azure-pipelines.yml  conftest.py  demo.ipynb  oauth.py  pyproject.toml  renovate.json  requirements-test.txt  requirements.in  requirements.txt  run_coveralls.py  run_tests.py  setup.cfg  setup.py  tox.ini
.azure-pipelines/jobs/: test.yml
.github/: .config.yml  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labels.toml  release-drafter.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: changelog-generator.yml  ci.yml  codeql.yml  docs.yml  draft-release.yml  hacktoberfest.yml  issue-manager.yml  labels.yml  lint.yml  poetry-upgrade.yml  pre-commit-autoupdate.yml  publish-pypi.yml  pythonpackage.yml  release.yml  semantic-release.yml  tests.yml  upgrader.yml
deezer/: __init__.py  async.py  client.py  dates.py  exceptions.py  pagination.py  resources.py  utils.py
deezer/contrib/: tornado.py
deezer/tests/: base.py  mocked_methods.py  test_client_parameter.py  test_resources.py
docs/: Makefile  async.md  conf.py  index.md  make.bat  requirements.txt  usage.md
docs/_templates/: page.html
docs/api_reference/: async_client.rst  async_pagination.rst  async_resources.md  client.rst  resources.md  toc.rst
docs/api_reference/async_resources/: album.rst  artist.rst  chart.rst  editorial.rst  episode.rst  genre.rst  playlist.rst  podcast.rst  radio.rst  track.rst  user.rst
docs/api_reference/resources/: artist.rst  editorial.rst  episode.rst  genre.rst  playlist.rst  radio.rst  user.rst
docs/source/: api_reference.rst  async.rst  asynchronous.md  asynchronous.rst  changelog.md  client.rst  conf.py  index.md  index.rst  installation.md  installation.rst  license.rst  pagination.md  usage.md  usage.rst
docs/source/_templates/: page.html
docs/source/api_reference/: pagination.rst  resources.md  resources.rst  toc.rst  utils.rst
specs/: schema.yaml
src/async_deezer/: __init__.py  client.py  pagination.py
src/async_deezer/resources/: __init__.py  album.py  artist.py  chart.py  editorial.py  episode.py  genre.py  playlist.py  podcast.py  radio.py  resource.py  track.py  user.py
src/deezer/: __init__.py  _mixin.py  auth.py  client.py  dates.py  exceptions.py  pagination.py  resources.py  utils.py
src/deezer/asyncio/: __init__.py  client.py  pagination.py
src/deezer/resources/: album.py  artist.py  chart.py  editorial.py  episode.py  genre.py  playlist.py  podcast.py  radio.py  resource.py  track.py  user.py
templates/: .changelog-old.md  CHANGELOG.md.j2
tests/: base.py  test_async_client.py  test_client.py  test_client_parameter.py  test_exceptions.py  test_pagination.py  test_resources.py  test_tornado_client.py
tests/asyncio/: conftest.py  test_album.py  test_artist.py  test_chart.py  test_client.py  test_editorial.py  test_episode.py  test_genre.py  test_pagination.py  test_playlist.py  test_podcast.py  test_radio.py  test_track.py  test_user.py
tests/asyncio/cassettes/: TestAsyncAlbum.test_get_relation.yaml  TestAsyncAlbum.test_get_tracks.yaml  TestAsyncArtist.test_attributes.yaml  TestAsyncArtist.test_get_albums.yaml  TestAsyncArtist.test_get_playlists.yaml  TestAsyncArtist.test_get_radio.yaml  TestAsyncArtist.test_get_related.yaml  TestAsyncArtist.test_get_top.yaml  TestAsyncChart.test_get_albums.yaml  TestAsyncChart.test_get_artists.yaml  TestAsyncClient.test_add_user_album.yaml  TestAsyncClient.test_add_user_artist.yaml  TestAsyncClient.test_add_user_following.yaml  TestAsyncClient.test_add_user_playlist.yaml  TestAsyncClient.test_add_user_track.yaml  TestAsyncClient.test_context_manager.yaml  TestAsyncClient.test_create_playlist.yaml  TestAsyncClient.test_delete_playlist.yaml  TestAsyncClient.test_error_response.yaml  TestAsyncClient.test_get_album_attributes.yaml  TestAsyncClient.test_get_current_user.yaml  TestAsyncClient.test_get_radios_top.yaml  TestAsyncClient.test_get_user_albums.yaml  TestAsyncClient.test_get_user_artists.yaml  TestAsyncClient.test_get_user_flow.yaml  TestAsyncClient.test_get_user_followers.yaml  (+70 more)
tests/cassettes/: TestAlbum.test_album_artist.yaml  TestAlbum.test_album_title_repr.yaml  TestAlbum.test_album_tracks.yaml  TestAlbum.test_artist.yaml  TestAlbum.test_as_dict.yaml  TestAlbum.test_contributors.yaml  TestAlbum.test_genres.yaml  TestAlbum.test_rate.yaml  TestAlbum.test_title_repr.yaml  TestAlbum.test_tracks.yaml  TestArtist.test_artist_albums.yaml  TestArtist.test_artist_attributes.yaml  TestArtist.test_artist_radio.yaml  TestArtist.test_artist_related.yaml  TestArtist.test_get_albums.yaml  TestAsyncClient.test_access_token_set.yaml  TestAsyncClient.test_get_object.yaml  TestAsyncClient.test_get_relation.yaml  TestChart.test_chart_albums.yaml  TestChart.test_chart_artists.yaml  TestChart.test_chart_playlists.yaml  TestChart.test_chart_tracks.yaml  TestChart.test_get_albums.yaml  TestChart.test_get_artists.yaml  TestChart.test_get_playlists.yaml  TestChart.test_get_podcasts.yaml  TestChart.test_get_tracks.yaml  TestChart.test_iter_albums.yaml  TestChart.test_iter_artists.yaml  TestChart.test_iter_playlists.yaml  TestChart.test_iter_tracks.yaml  TestClient.test_access_token_set.yaml  TestClient.test_add_user_album.yaml  TestClient.test_add_user_artist.yaml  TestClient.test_add_user_following.yaml  TestClient.test_add_user_playlist.yaml  TestClient.test_add_user_track.yaml  TestClient.test_advanced_search_complex.yaml  TestClient.test_advanced_search_complex_with_relation.yaml  TestClient.test_advanced_search_invalid.yaml  (+137 more)
tests/resources/: test_album.py  test_artist.py  test_chart.py  test_editorial.py  test_episode.py  test_genre.py  test_playlist.py  test_podcast.py  test_radio.py  test_resource.py  test_track.py  test_user.py
(+99 files in other folders)
