[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
target-version = "py39"
line-length = 120

lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."conftest.py" = [ "D100" ]
lint.per-file-ignores."docs/conf.py" = [ "D100" ]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.isort.known-first-party = [ "deezer" ]

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=deezer"
pythonpath = [ "src" ]

[tool.coverage.run]
branch = true
source = [ "deezer" ]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "if TYPE_CHECKING",
  "raise NotImplementedError",
]

[tool.mypy]
# suppress errors about unsatisfied imports
ignore_missing_imports = true

no_implicit_optional = true

# ensure all execution paths are returning
warn_no_return = true

show_error_codes = true

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
  "src/deezer/__init__.py:__version__",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "chore.*",
  "ci.*",
  "Merge pull request .*",
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.stable]
match = "(?!stable/*$)"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true

[dependency-groups]
docs = [
    "myst-parser>=0.16; python_version >= \"3.11\"",
    "sphinx>=4.0; python_version >= \"3.11\"",
    "furo>=2023.5.20; python_version >= \"3.11\"",
    "sphinx-autobuild>=2024.0.0; python_version >= \"3.11\"",
]
dev = [
    "coverage<8.0,>=7.0",
    "environs<12.0.0,>=11.0.0",
    "pytest<9.0.0,>=8.0.0",
    "pytest-cov<7.0.0,>=6.0.0",
    "pytest-mock<4.0,>=3.6",
    "pytest-vcr<2.0,>=1.0",
    "vcrpy<7.0.0,>=6.0.0",
    "deezer-oauth-cli<2.0.0,>=1.0.0",
]

[project]
authors = [
    {name = "Bruno Alla", email = "alla.brunoo@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.23.0",
]
name = "deezer-python"
version = "7.1.0"
description = "A friendly wrapper library for the Deezer API"
readme = "README.md"
keywords = [
    "deezer",
    "sdk",
    "client",
    "requests",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Bug Tracker" = "https://github.com/browniebroke/deezer-python/issues"
Changelog = "https://deezer-python.readthedocs.io/en/latest/changelog.html"
Twitter = "https://twitter.com/_BrunoAlla"
Mastodon = "https://fosstodon.org/@browniebroke"
repository = "https://github.com/browniebroke/deezer-python"
documentation = "https://deezer-python.readthedocs.io"