[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=77.0.3" ]

[project]
name = "deezer-python"
version = "7.2.0"
description = "A friendly wrapper library for the Deezer API"
readme = "README.md"
keywords = [
  "client",
  "deezer",
  "requests",
  "sdk",
]
license = "MIT"
authors = [
  { name = "Bruno Alla", email = "alla.brunoo@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "httpx>=0.23",
]
urls."Bug Tracker" = "https://github.com/browniebroke/deezer-python/issues"
urls.Changelog = "https://deezer-python.readthedocs.io/en/latest/changelog.html"
urls.documentation = "https://deezer-python.readthedocs.io"
urls.Mastodon = "https://fosstodon.org/@browniebroke"
urls.repository = "https://github.com/browniebroke/deezer-python"
urls.Twitter = "https://twitter.com/_BrunoAlla"

[dependency-groups]
dev = [
  "coverage>=7,<8",
  "deezer-oauth-cli>=1,<2",
  "environs>=14,<15",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "pytest-mock>=3.6,<4",
  "pytest-vcr>=1,<2",
  "ty>=0.0.6",
  "vcrpy>=8,<9",
]

docs = [
  "furo>=2023.5.20; python_version>='3.11'",
  "myst-parser>=0.16; python_version>='3.11'",
  "sphinx>=4; python_version>='3.11'",
  "sphinx-autobuild>=2024; python_version>='3.11'",
]

[tool.ruff]
line-length = 120

lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."conftest.py" = [ "D100" ]
lint.per-file-ignores."docs/conf.py" = [ "D100" ]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.isort.known-first-party = [ "deezer" ]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=deezer"
pythonpath = [ "src" ]

[tool.coverage.run]
branch = true
source = [ "deezer" ]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "if TYPE_CHECKING",
  "raise NotImplementedError",
]

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
  "src/deezer/__init__.py:__version__",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "chore.*",
  "ci.*",
  "Merge pull request .*",
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.stable]
match = "(?!stable/*$)"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true
