[bumpversion]
commit = True
tag = True
current_version = 1.6.0
tag_name = {new_version}

[bumpversion:file:deezer/__init__.py]

[metadata]
name = deezer-python
version = attr: deezer.__version__
author = Bruno Alla
author_email = alla.brunoo@gmail.com
description = A friendly wrapper library for the Deezer API
license = MIT license
license_file = LICENSE.txt
long_description = file:README.md
long_description_content_type = text/markdown
keywords = deezer, sdk, client, requests
url = https://deezer-python.readthedocs.io
project_urls = 
	Source = https://github.com/browniebroke/deezer-python
	Documentation = https://deezer-python.readthedocs.io
	Changelog = https://deezer-python.readthedocs.io/en/latest/changelog.html
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Natural Language :: English
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3 :: Only
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires = 
	requests
test_require = 
	pytest>=3

[options.extras_require]
tornado = tornado

[options.packages.find]
include = 
	deezer
	deezer.*

[bdist_wheel]
universal = 1

[check-manifest]
ignore = 
	.github
	.github/*
	.all-contributorsrc
	.readthedocs.yml
	.pre-commit-config.yaml
	demo.ipynb
	tox.ini
	tests
	tests/*
	docs/*

[flake8]
ignore = D203,W503
exclude = 
	.git,
	__pycache__,
	docs/source/conf.py,
	old,
	build,
	dist
max-complexity = 10
max-line-length = 120

[tool:pytest]
addopts = -v -Wdefault --cov=deezer

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
known_first_party = deezer

[coverage:run]
branch = true
source = deezer

[coverage:report]
ignore_errors = true
